Ajustes na integração com IA e controllers do projeto